libosso (1.16-1) unstable; urgency=low

  * UNRELEASED
  * Modified Control Panel plugin startup so that single instance can be
    achieved. The patch is from Johan Bilien. Fixes: NB#25238
  * Fixed several possible memory leaks in osso-rpc.c. Fixes: NB#34403

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 10 Aug 2006 15:03:27 +0300

libosso (1.15-1) unstable; urgency=low

  * Removed dbus_connection_unref()s, because they make DBus asserts fail
    Fixes: NB#32642.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 14 Jun 2006 14:39:33 +0300

libosso (1.14-1) unstable; urgency=low

  * Fixed osso_mem_saw to use the high watermark instead of the deny watermark
    (N#32122).
  * New function osso_mem_in_lowmem_state().

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 08 Jun 2006 15:27:32 +0300

libosso (1.13-1) unstable; urgency=low

  * Removed the 'or later' part from licenses.
  * Now calling the low-memory callback also when it is registered (N#32044).
  * Put more warnings about brokenness of osso_time_set().

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 07 Jun 2006 20:10:26 +0300

libosso (1.12-1) unstable; urgency=low

  * Fixed memory leak in osso->cp_plugins (N#26473).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 26 May 2006 16:33:17 +0300

libosso (1.11-1) unstable; urgency=low

  * Removed the fixed number of mime arguments limitation (N#25395).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 10 May 2006 10:29:20 +0300

libosso (1.10-1) unstable; urgency=low

  * Applied patch from Jari Tenhunen for allowing services not beginning
    with 'com.nokia' (N#28782).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 05 May 2006 16:35:09 +0300

libosso (1.9-1) unstable; urgency=low

  * osso_run_async_with_argfill is now visible (N#27828).
  * Lintian fixes.
  * osso-mem cleanup patch from Leonid (N#27012).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 26 Apr 2006 13:42:57 +0300
