@@ -4,6 +4,8 @@ libosso (1.16-1) unstable; urgency=low
   * Modified Control Panel plugin startup so that single instance can be
     achieved. The patch is from Johan Bilien. Fixes: NB#25238
   * Fixed several possible memory leaks in osso-rpc.c. Fixes: NB#34403
+  * Fixed the osso_time_set() to actually send a signal about time change.
+    Fixes: NB#35824
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 10 Aug 2006 15:03:27 +0300
 
